--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,6 +4,8 @@
     {% for post in posts %}
         <div class="post">
             <h1><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h1>
+            <!--a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.comments.count }}</a><br-->
+            <a href="{% url 'post_detail' pk=post.pk %}">Comments: {{ post.approved_comments.count }}</a>
             <div class="date">
                 <p>published: {{ post.published_date }}</p>
             </div>
