--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,31 +1,119 @@
 {% load static %}
-<html>
+<!DOCTYPE html>
+<html lang="pt-br">
     <head>
-        <title>Blog</title>
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
-        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
-        <link href="//fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <!-- Meta tags Obrigatórias -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        <link rel="stylesheet" href="{% static 'css/blog.css' %}">
+        <title>Blog</title>
     </head>
     <body>
-    <div class="page-header">
-        {% if user.is_authenticated %}
-            <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-            <a href="{% url 'post_rascunho_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-            <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-        {% else %}
-            <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-        {% endif %}
-        <h1><a href="/">Blog</a></h1>
-    </div>
-    <div class="content container">
-        <div class="row">
-            <div class="col-md-8">
-            {% block content %}
-            {% endblock %}
+        <div class="container geral">
+            <div class="bnav ">
+                <nav class="navbar navbar-expand-md navbar-light bg-light propaganda">
+                    <a class="navbar-brand" href="/">Criar uma boa cara do sistema.</a>
+                    
+                    <div class="collapse navbar-collapse" id="textoNavbar">
+                        
+                        <!--ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Destaques</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Preços</a>
+                            </li>
+                        </ul-->
+                        <!--form class="navbar-nav ml-auto">
+                            
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'post_new' %}" class="nav-link"><span class="glyphicon glyphicon-plus"></span>Novo </a>
+                                <a class="nav-link">|</a>
+                                <a href="{% url 'post_rascunho_list' %}" class="nav-link"><span class="glyphicon glyphicon-edit"></span>Rascunhos Salvos </a>
+                                <a class="nav-link">|</a>
+                                <div class="nav-item"><a class="nav-item">Olá, {{ user.username }}</a>(<a href="{% url 'logout' %}" class="nav-item">Log out</a>)</div>
+                            {% else %}
+                                <a href="{% url 'login' %}" class="nav-link">Entrar</a> | <a href="{% url 'login' %}" class="nav-link">Registra-se</a>
+                            {% endif %}
+                            <!--input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
+                        </form-->
+                    </div>
+                </nav>
             </div>
+            <div class="bnav" style="padding-top: 0px">
+                <nav class="navbar navbar-expand-md navbar-light bg-light">
+                    <a class="navbar-brand" href="/">Blog</a>
+                    
+                    <div class="collapse navbar-collapse" id="textoNavbar">
+                        
+                        <!--ul class="navbar-nav mr-auto">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Destaques</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Preços</a>
+                            </li>
+                        </ul-->
+                        <form class="navbar-nav ml-auto">
+                            
+                            {% if user.is_authenticated %}
+                                <a href="{% url 'post_new' %}" class="nav-link"><span class="glyphicon glyphicon-plus"></span>Novo </a>
+                                <a class="nav-link">|</a>
+                                <a href="{% url 'post_rascunho_list' %}" class="nav-link"><span class="glyphicon glyphicon-edit"></span>Rascunhos Salvos </a>
+                                <a class="nav-link">|</a>
+                                <div class="nav-item"><a class="nav-item">Olá, {{ user.username }}</a>(<a href="{% url 'logout' %}" class="nav-item">Log out</a>)</div>
+                            {% else %}
+                                <a href="{% url 'login' %}" class="nav-link">Entrar</a> | <a href="{% url 'login' %}" class="nav-link">Registra-se</a>
+                            {% endif %}
+                            <!--input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
+                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button-->
+                        </form>
+                    </div>
+                </nav>
+            </div>
+            
+            
+            
+            <!--div class="page-header">
+                {% if user.is_authenticated %}
+                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+                    <a href="{% url 'post_rascunho_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
+                    <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
+                {% else %}
+                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
+                {% endif %}
+                <h1><a href="/">Blog</a></h1>
+            </div-->
+            <div class="content container">
+                <div class="row">
+                    <div class="col-md-3 menu_principal">
+                        <div class="barra-navegacao">
+                            perfil
+                        </div>
+                    </div>
+                    <div class="col-md-6 conteudo">
+                    {% block content %}
+                    {% endblock %}
+                    </div>
+                    
+                    <div class="col-md-3 menu_lateral">
+                        <div class="barra-navegacao">
+                            oioi
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+            <!-- JavaScript (Opcional) -->
+            <!-- jQuery primeiro, depois Popper.js, depois Bootstrap JS -->
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+            
         </div>
-    </div>
-</body>
+    </body>
 </html>
