--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,9 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
+        <!-- Link para icones disponiveis no https://fontawesome.com/start-->
+        <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
+        
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
@@ -48,7 +51,7 @@
                 <nav class="navbar navbar-expand-md navbar-light bg-light">
                     <a class="navbar-brand" href="/">Blog</a>
                     
-                    <div class="collapse navbar-collapse" id="textoNavbar">
+                    <div class="collapse navbar-collapse" id="textoNavbar" >
                         
                         <!--ul class="navbar-nav mr-auto">
                             <li class="nav-item">
@@ -61,13 +64,15 @@
                         <form class="navbar-nav ml-auto">
                             
                             {% if user.is_authenticated %}
-                                <a href="{% url 'post_new' %}" class="nav-link"><span class="glyphicon glyphicon-plus"></span>Novo </a>
+                                <a href="{% url 'post_new' %}" class="nav-link"><span class="glyphicon glyphicon-plus"></span>Nova Postagem </a>
                                 <a class="nav-link">|</a>
                                 <a href="{% url 'post_rascunho_list' %}" class="nav-link"><span class="glyphicon glyphicon-edit"></span>Rascunhos Salvos </a>
                                 <a class="nav-link">|</a>
                                 <div class="nav-item"><a class="nav-item">Olá, {{ user.username }}</a>(<a href="{% url 'logout' %}" class="nav-item">Log out</a>)</div>
                             {% else %}
-                                <a href="{% url 'login' %}" class="nav-link">Entrar</a> | <a href="{% url 'login' %}" class="nav-link">Registra-se</a>
+                                <a href="{% url 'login' %}" class="nav-link">Entrar</a>
+                                <a class="nav-link">|</a>
+                                <a href="{% url 'login' %}" class="nav-link">Registra-se</a>
                             {% endif %}
                             <!--input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button-->
