--- a/blog/templates/blog/post_edit.html
+++ b/blog/templates/blog/post_edit.html
@@ -1,9 +1,12 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-    <h1>Nova postagem</h1>
-    <form method="POST" class="post-form">{% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="save btn btn-default">Save</button>
-    </form>
+    <div class="edit">
+    
+        <h1>{{ acao }} postagem</h1>
+        <form method="POST" class="post-form">{% csrf_token %}
+            {{ form.as_p }}
+            <button type="submit" class="save btn btn-default">Salvar</button>
+        </form>
+    </div>
 {% endblock %}
