--- a/blog/templates/registration/login.html
+++ b/blog/templates/registration/login.html
@@ -1,10 +1,17 @@
 {% extends "blog/base.html" %}
 
 {% block content %}
-    {% if form.errors %}
-        <p>Your username and password didn't match. Please try again.</p>
-    {% endif %}
 
+<div class="login">
+
+    <h1 style="text-align:center;">Faça login</h1>
+ 
+
+    {% if form.errors %}
+        <p>Erro: Usuário ou Senha incorreto. Tente novamente.</p>
+    {% endif %}
+    
+    
     <form method="post" action="{% url 'login' %}">
     {% csrf_token %}
         <table>
@@ -17,8 +24,13 @@
             <td>{{ form.password }}</td>
         </tr>
         </table>
-
-        <input type="submit" value="login" />
+</br>
+        <input class="btn btn-outline-dark login-btn" type="submit" value="login" />
         <input type="hidden" name="next" value="{{ next }}" />
     </form>
+
+</div>
+<div class="login" style="margin-top:15px; text-align:center;">
+    <a>Cadastre-se clicando aqui!</a>
+</div>
 {% endblock %}
