--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -26,8 +26,14 @@ h1, h2, h3, h4 {
     font-family: 'Lobster', cursive;
 }
 
+p {
+    margin-top: 10px;
+}
+
 .date {
     color: #828282;
+    margin-block-end: auto;
+    margin-top: 10px;
 }
 
 .save {
@@ -69,33 +75,34 @@ h1, h2, h3, h4 {
 
 .post {
     background-color: #5fc1659c ;
-    border-radius: 10px !important ;
-    padding: 5px 15px 1px 15px ;/* top left down ritgh*/
+    border-radius: 10px ;
+    padding: 10px 15px 15px 15px ;/* top left down ritgh*/
     margin-bottom: 12px;
     width: 100%;
     /*justify-content: center;*/
 }
 .edit {
     background-color: #5fc1659c ;
-    border-radius: 10px !important ;
-    padding: 5px 15px 1px 15px ;/* top left down ritgh*/
+    border-radius: 10px  ;
+    padding: 15px 15px 15px 15px ;/* top left down ritgh*/
     margin-bottom: 12px;
     width: 100%;
-    height: 500px;
+    height: 105%;
     /*justify-content: center;*/
 }
 .navbar{
     /* definimos o quão arredondado irá ficar nosso box */
-    border-radius: 10px !important ;
+    border-radius: 10px  ;
     /* definimos a altura do box */
-    height:50px !important ;
+    /*height:50px  ;*/
 }
+
 .nav-item{
     padding: 8px 8px 8px 8px ;
 }
 .propaganda{
-    background-color: #32bd48 !important ;
-    height: 100px !important ;
+    background-color: #32bd48  ;
+    height: 100px  ;
     
 }
 .content{
@@ -104,12 +111,14 @@ h1, h2, h3, h4 {
 .menu_lateral{
     /*background: black;*/
     padding: 00px 10px 10px 10px ;/* top ritgh down left*/
+    width: 1%;
+    height: 1%;
 }
 .barra-navegacao{
     background: #f8f9fa;
     height: 100%;
     width: 100%;
-    border-radius: 10px !important ;
+    border-radius: 10px  ;
     padding: 8px 8px 8px 8px ;/* top ritgh down left*/
 }
 .menu_principal{
@@ -117,7 +126,9 @@ h1, h2, h3, h4 {
     padding: 00px 10px 10px 10px ;/* top ritgh down left*/
 }
 .conteudo{
-    padding: 00px 0px 10px 0px ;/* top ritgh down left*/
+    padding: 00px 0px 10px 0px;
+    margin-left: 10px !important;
+    margin-right: 10px;
 }
 .texto_blog{
     color: black;
@@ -130,10 +141,14 @@ h1, h2, h3, h4 {
     width: 300px;
     margin-left: auto;
     margin-right: auto;
+    text-align: -webkit-center;
 }
 .login-btn{
     width: 200px;
-    height: 30px;
-    margin-left: auto;
-    margin-right: auto;
+    height: 38px;
+    border-radius: 40px !important ;
 }
+
+/*.navbar-brand{
+    text-align: left;
+}*/
