--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,51 +9,35 @@
         <!-- Link para icones disponiveis no https://fontawesome.com/start-->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
         
+        <!-- Semantic ui https://react.semantic-ui.com/usage CSS -->
+        <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/semantic-ui@2.4.1/dist/semantic.min.css"/>
+        
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
         <link rel="stylesheet" href="{% static 'css/blog.css' %}">
         <title>Blog</title>
     </head>
     <body>
-        <div class="container geral">
+        <div class="container-fluid geral">
+            
             <div class="bnav ">
                 <nav class="navbar navbar-expand-md navbar-light bg-light propaganda">
                     <a class="navbar-brand" href="/">Criar uma boa cara do sistema.</a>
-                    
                     <div class="collapse navbar-collapse" id="textoNavbar">
-                        
-                        <!--ul class="navbar-nav mr-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Destaques</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Preços</a>
-                            </li>
-                        </ul-->
-                        <!--form class="navbar-nav ml-auto">
-                            
-                            {% if user.is_authenticated %}
-                                <a href="{% url 'post_new' %}" class="nav-link"><span class="glyphicon glyphicon-plus"></span>Novo </a>
-                                <a class="nav-link">|</a>
-                                <a href="{% url 'post_rascunho_list' %}" class="nav-link"><span class="glyphicon glyphicon-edit"></span>Rascunhos Salvos </a>
-                                <a class="nav-link">|</a>
-                                <div class="nav-item"><a class="nav-item">Olá, {{ user.username }}</a>(<a href="{% url 'logout' %}" class="nav-item">Log out</a>)</div>
-                            {% else %}
-                                <a href="{% url 'login' %}" class="nav-link">Entrar</a> | <a href="{% url 'login' %}" class="nav-link">Registra-se</a>
-                            {% endif %}
-                            <!--input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button>
-                        </form-->
                     </div>
                 </nav>
             </div>
+            
             <div class="bnav" style="padding-top: 0px">
-                <nav class="navbar navbar-expand-md navbar-light bg-light">
-                    <a class="navbar-brand" href="/">Blog</a>
+                <nav class="navbar navbar-expand-sm navbar-light bg-light">
                     
-                    <div class="collapse navbar-collapse" id="textoNavbar" >
-                        
-                        <!--ul class="navbar-nav mr-auto">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu_geral" aria-controls="menu_geral" aria-expanded="false" aria-label="Alterna navegação">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="container" style="width: auto;">
+                        <a class="navbar-brand" href="/">Blog</a>
+                            
+                        <!--ul class="navbar-nav mr-auto" style="flex-direction: row;">
                             <li class="nav-item">
                                 <a class="nav-link" href="#">Destaques</a>
                             </li>
@@ -61,54 +45,71 @@
                                 <a class="nav-link" href="#">Preços</a>
                             </li>
                         </ul-->
-                        <form class="navbar-nav ml-auto">
+                        
+                    </div>
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#menu1" aria-controls="menu1" aria-expanded="false" aria-label="Alterna navegação">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="menu1">
+                        
+                        <div class="navbar-nav ml-auto">
                             
                             {% if user.is_authenticated %}
                                 <a href="{% url 'post_new' %}" class="nav-link"><span class="glyphicon glyphicon-plus"></span>Nova Postagem </a>
-                                <a class="nav-link">|</a>
+                                
                                 <a href="{% url 'post_rascunho_list' %}" class="nav-link"><span class="glyphicon glyphicon-edit"></span>Rascunhos Salvos </a>
-                                <a class="nav-link">|</a>
-                                <div class="nav-item"><a class="nav-item">Olá, {{ user.username }}</a>(<a href="{% url 'logout' %}" class="nav-item">Log out</a>)</div>
+                                
+                                <div class="nav-link"><a >Olá, {{ user.username }} </a> (<a href="{% url 'logout' %}" class="nav-item">Log out</a>)</div>
                             {% else %}
                                 <a href="{% url 'login' %}" class="nav-link">Entrar</a>
-                                <a class="nav-link">|</a>
+                                
                                 <a href="{% url 'login' %}" class="nav-link">Registra-se</a>
                             {% endif %}
                             <!--input class="form-control mr-sm-2" type="search" placeholder="Pesquisar" aria-label="Pesquisar">
                             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Pesquisar</button-->
-                        </form>
+                        </div>
                     </div>
                 </nav>
             </div>
             
-            
-            
-            <!--div class="page-header">
-                {% if user.is_authenticated %}
-                    <a href="{% url 'post_new' %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
-                    <a href="{% url 'post_rascunho_list' %}" class="top-menu"><span class="glyphicon glyphicon-edit"></span></a>
-                    <p class="top-menu">Hello {{ user.username }} <small>(<a href="{% url 'logout' %}">Log out</a>)</small></p>
-                {% else %}
-                    <a href="{% url 'login' %}" class="top-menu"><span class="glyphicon glyphicon-lock"></span></a>
-                {% endif %}
-                <h1><a href="/">Blog</a></h1>
-            </div-->
-            <div class="content container">
-                <div class="row">
-                    <div class="col-md-3 menu_principal">
-                        <div class="barra-navegacao">
-                            perfil
+            <div class="content container-fluid">
+                <div class="row navbar-expand-lg">
+                    
+                    <!-- 
+                    
+                    Extra small     Small         Medium        Large        Extra large                          
+                    <576px	        ≥576px	      ≥768px	    ≥992px       ≥1200
+                    .col-	        .col-sm-	  .col-md-	    .col-lg-	 .col-xl-
+                    
+                    -->
+                    
+                    <div class="navbar-expand-sm col-sm-4 col-md-3 col-lg-3 col-xl-2 menu_principal">
+                        <div class="collapse navbar-collapse " id="menu_geral">
+                            <div class="barra-navegacao">
+                                <div class="collapse navbar-collapse" id="menu_geral">
+                                    <div class="perfil">
+                                        <div>
+                                        <img>Foto</img><br>
+                                        {{ user.username }}
+                                        </div><hr>
+                                        <div>
+                                            Opção
+                                        </div>
+                                    </div>
+                                </div>
+                            </div><!--/div-->
                         </div>
                     </div>
-                    <div class="col-md-6 conteudo">
+                    <div class="col conteudo">
                     {% block content %}
                     {% endblock %}
                     </div>
-                    
-                    <div class="col-md-3 menu_lateral">
-                        <div class="barra-navegacao">
-                            oioi
-                        </div>
+                    <div class="collapse navbar-collapse col-sm-12 col-md-5 col-lg-4 col-xl-5 menu_lateral">
+                        
+                            <div class="barra-navegacao">
+                                oioi
+                            </div>
+                        
                     </div>
                 </div>
             </div>
