--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -120,6 +120,7 @@ p {
     width: 100%;
     border-radius: 10px  ;
     padding: 8px 8px 8px 8px ;/* top ritgh down left*/
+    text-align: -webkit-center;
 }
 .menu_principal{
     /*background: black;*/
@@ -149,6 +150,33 @@ p {
     border-radius: 40px !important ;
 }
 
+.perfil{
+    width: 100px;
+}
+
+.foto{
+    /*background:#fa0c01;
+    color:#fff;*/
+    width:130px;
+    height:130px;
+    line-height:300px;
+    vertical-align:middle;
+    /*text-align:center;*/
+    /*font-size:30px;*/
+    border-radius:50%;
+    -moz-border-radius:50%;
+    -webkit-border-radius:50%;
+    padding-right: 0px; 
+    padding-left: 0px; 
+}
 /*.navbar-brand{
     text-align: left;
 }*/
+.barra-naveg{
+    background: #f8f9fa;
+    height: 100%;
+    width: 100%;
+    border-radius: 10px  ;
+    padding: 8px 8px 8px 8px ;/* top ritgh down left*/
+    /*text-align: -webkit-center;*/
+}
